--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -1,3 +1,5 @@
+@import url('rc-pagination/assets/index.css');
+
 body {
   min-width: 1200px;
 }
@@ -1094,4 +1096,18 @@ body {
 .Mui-search fieldset {
   border-top-right-radius: 0!important;
   border-bottom-right-radius: 0!important;
+}
+
+* {
+  outline: none;
+}
+
+.rc-pagination {
+  display: inline-block;
+}
+
+.rc-pagination .rc-pagination-item>a {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
 }
