--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -1,4 +1,3 @@
-@import url('rc-pagination/assets/index.css');
 
 body {
   min-width: 1200px;
@@ -1050,8 +1049,8 @@ body {
 }
 
 .experts-list {
-  height: 280px;
-  width: 236px;
+  height: 180;
+  width: 12.5%;
   float: left;
 }
 
